syntax = "proto3";

package syft.core.node.common.action;

import "proto/core/common/common_object.proto";

message RequestAnswerResponse {
    int32 status = 1;
    syft.core.common.UID request_id = 2;
}
